Products.DCWorkflow Changelog
=============================

2.2.0 (unreleased)
------------------

- Strip trailing newlines in order to properly match with a msgid when
  translating transition descriptions.

- Workflow UI: Remove ancient cruft to accommodate the proprietary
  (and long dead) base_cms product.

- Worklists and Transitions: Add icon expression properties to worklist
  and transition actions and their GenericSetup profiles.

- Fixed an import error (Products.PageTemplates.TALES is gone on 
  Zope trunk).  Because we require Zope >= 2.10, we don't need a
  BBB conditional import.


2.1.2-beta (2008-08-26)
------------------

- completed devolution from monolithic CMF package into its component
  products that are distributed as eggs from PyPI.


2.1.1 (2008-01-06)
------------------

- no changes


2.1.1-beta(2007-12/29)
----------------------

- Testing: Derive test layers from ZopeLite layer if available.

- exportimport: Scripts with invalid types imported
  after scripts with valid types will no longer place the valid
  script twice.  Scripts can also now be specified with meta_types
  other than the hard-coded meta_types.

- AfterTransitionEvent now passes along the new status of the
  object, just as StateChangeInfo passes on the new status to
  after-transition scripts.
  (http://www.zope.org/Collectors/CMF/490)


2.1.0 (2007-08-08)
------------------

- Fixed all componentregistry.xml files to use plain object paths and strip
  and slashes. GenericSetup does only support registering objects which are
  in the site root.


2.1.0-beta2 (2007-07-12)
------------------------

- moved the Zope dependency to version 2.10.4

- Remove antique usage of marker attributes in favor of interfaces,
  leaving BBB behind for places potentially affecting third-party code.
  (http://www.zope.org/Collectors/CMF/440)

- Add POST-only protections to security critical methods.
  http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2007-0240)
