@@ -15,19 +15,19 @@
 $Id$
 """
 
-from AccessControl import ClassSecurityInfo
 from AccessControl.requestmethod import postonly
+from AccessControl.SecurityInfo import ClassSecurityInfo
 from Acquisition import aq_inner
 from Acquisition import aq_parent
-from Globals import DTMLFile
-from Globals import InitializeClass
-from Globals import PersistentMapping
+from App.class_init import default__class_init__ as InitializeClass
+from App.special_dtml import DTMLFile
+from Persistence import PersistentMapping
 from OFS.SimpleItem import SimpleItem
 from Products.PageTemplates.PageTemplateFile import PageTemplateFile
 
-from ContainerTab import ContainerTab
-from permissions import ManagePortal
-from utils import _dtmldir
+from Products.DCWorkflow.ContainerTab import ContainerTab
+from Products.DCWorkflow.permissions import ManagePortal
+from Products.DCWorkflow.utils import _dtmldir
 
 
 class StateDefinition(SimpleItem):
