@@ -15,18 +15,18 @@
 $Id$
 """
 
-from AccessControl import ClassSecurityInfo
+from AccessControl.SecurityInfo import ClassSecurityInfo
 from Acquisition import aq_inner
 from Acquisition import aq_parent
-from Globals import DTMLFile
-from Globals import InitializeClass
+from App.class_init import default__class_init__ as InitializeClass
+from App.special_dtml import DTMLFile
 from OFS.SimpleItem import SimpleItem
 
-from ContainerTab import ContainerTab
-from Expression import Expression
-from Guard import Guard
-from permissions import ManagePortal
-from utils import _dtmldir
+from Products.DCWorkflow.ContainerTab import ContainerTab
+from Products.DCWorkflow.Expression import Expression
+from Products.DCWorkflow.Guard import Guard
+from Products.DCWorkflow.permissions import ManagePortal
+from Products.DCWorkflow.utils import _dtmldir
 
 
 class VariableDefinition(SimpleItem):
