@@ -15,7 +15,8 @@
 $Id$
 """
 
-from zope.interface import Interface, Attribute
+from zope.interface import Attribute
+from zope.interface import Interface
 from zope.component.interfaces import IObjectEvent
 
 class IDCWorkflowDefinition(Interface):
