@@ -17,9 +17,9 @@ $Id$
 
 import os
 
-from AccessControl import ModuleSecurityInfo
 from AccessControl.Permission import Permission
 from AccessControl.Role import gather_permissions
+from AccessControl.SecurityInfo import ModuleSecurityInfo
 from App.Common import package_home
 from zope.i18nmessageid import MessageFactory
 
